--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="search-container">
                     <input type="text" class="search-input" placeholder="Поиск...">
-                    <img class="search-icon" src="img/search.svg" width="24" height="24" alt="поиск">
+                    <img class="search-icon" src="img/Search.svg" width="24" height="24" alt="поиск">
                     </div>
                     <button type="reset" class="reset-all">
                         <img src="img/сloseblue.svg" width="9" height="9" alt="Сбросить">
